# CryptoTrader

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  RESEARCH.md  RESEARCH_ACTIVE.md  RESEARCH_ARCHIVE.md  SETUP.md  main.py  pyproject.toml
.claude/: settings.json
alerts/: digest.py  discord_bot.py  monitor.py  telegram_bot.py
analysis/: monte_carlo.py  multiple_testing.py
backtesting/: crash_dca_engine.py  data_loader.py  dca_engine.py  engine.py  exit_signals_research3.py  exit_signals_research4.py  exit_strategy_research.py  full_plan_simulation_2020.py  metrics.py  optimizer.py  sp500_crash_research.py
cli/: commands_analysis.py  commands_data.py  commands_decision.py  commands_ops.py  commands_portfolio.py  commands_projection.py  constants.py
config/: settings.py
dashboard/: app.py
data/: collector.py  database.py  etf_prices.py  market_data.py  models.py  portfolio.py  sentiment.py
docs/: PLAYBOOKS.md
research/: 01_temporal_patterns.py  02_advanced_signals.py  03_onchain_data.py  04_sentiment_deep_analysis.py  05_strategy_optimization.py  06_dca_optimization.py  07_multi_pair_validation.py  08_crash_dca_validation.py  09_final_review.py  btc_multi_day_crash_research.py  dca_out_modalities_research.py  dxy_btc_correlation_research.py  eth_btc_ratio_research.py  eth_dca_out_research.py  exit_signals_research4.py  exit_strategy_research.py  funding_negative_research.py  research_nupl.py  sp500_crash_research.py  stablecoin_dominance_research.py  term_structure_research.py
scripts/: annual_returns.py  fee_analysis.py  final_validation.py  my_plan.py  my_projection.py  portfolio_analysis.py  risk_comparison.py
strategies/: base.py  bollinger_breakout.py  rsi_mean_reversion.py  sma_crossover.py
tests/: conftest.py  test_backtesting.py  test_collector.py  test_commands_decision.py  test_commands_projection.py  test_crash_dca_engine.py  test_dashboard.py  test_db_cleanup.py  test_dca_engine.py  test_digest_portfolio.py  test_discord_bot.py  test_drift_check.py  (+10 more)
(+11 files in other folders)
