[project]
name = "cryptotrader"
version = "0.1.0"
description = "Personal crypto advisor with backtesting, dashboard and Discord alerts"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ccxt>=4.0,<5.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "ta>=0.11,<0.12",
    "sqlalchemy>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "apscheduler>=3.10,<4.0",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]
alerts = []
research = [
    "yfinance>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]
all = ["cryptotrader[dashboard,alerts,dev,research]"]

[tool.setuptools.packages.find]
include = ["config*", "data*", "strategies*", "backtesting*", "alerts*", "dashboard*", "analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
